# lv_port_linux

./: .gitignore  CMakeLists.txt  README.md  build_apps.sh  lv_conf.h  run_build_lvgl.sh
config/: lv_conf_defaults.backup  lv_conf_defaults.h  lv_conf_fonts.h  lv_conf_widgets.h
lvgl/env_support/cmake/: custom.cmake
lvgl/src/drivers/sdl/: lv_sdl_keyboard.h  lv_sdl_mouse.h
src/: main.c
src/apps/calculator/: app.json  calculator.c  calculator.h
src/apps/notes/: app.json  notes.c  notes.h
src/apps/sms/: app.json  sms.c  sms.h
src/apps/sms2/: app.json  sms.c
src/launcher/: launcher.c  launcher.h
src/lib/display_backends/: sdl.c
src/settings/: theme.json
src/system/: app_manager.c  app_manager.h
src/system/app_registry/: app_registry.c  app_registry.h
src/system/debug/: debug.c
src/system/screens/app_menu/launcher/: launcher.c  launcher.h
src/system/screens/idle/home_screen/: home_screen.c  home_screen.h
src/system/theme_manager/: theme_manager.c  theme_manager.h
src/system/ui/: app_window.c  app_window.h
